--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -43,6 +43,7 @@
     "@fluentui/dom-utilities": "^2.2.15",
     "@fluentui/merge-styles": "^8.6.1",
     "@fluentui/set-version": "^8.2.15",
+    "@fluentui/react-window-provider": "^2.2.16",
     "tslib": "^2.1.0"
   },
   "peerDependencies": {
