--- a/packages/react-examples/package.json
+++ b/packages/react-examples/package.json
@@ -43,6 +43,7 @@
     "@fluentui/react-focus": "^8.8.43",
     "@fluentui/react-hooks": "^8.7.1",
     "@fluentui/react-icons-mdl2": "^1.3.60",
+    "@fluentui/react-window-provider": "^2.2.18",
     "@fluentui/scheme-utilities": "^8.3.45",
     "@fluentui/style-utilities": "^8.10.6",
     "@fluentui/theme": "^2.6.44",
